// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SwitchButton should match the snapshot when disabled 1`] = `
<div>
  <button
    aria-checked="true"
    aria-label="Test Switch Button"
    data-testid="react-gdpr-cookie-consent-switch-button"
    disabled=""
    role="switch"
    style="position: relative; display: inline-block; height: 24px; width: 44px; flex-shrink: 0; border-radius: 9999px; padding: 0px; cursor: not-allowed; opacity: 0.5; transition: background-color 200ms ease-in-out; vertical-align: middle;"
    type="button"
  >
    <span
      aria-hidden="true"
      style="position: absolute; top: 2px; left: 22px; height: 20px; width: 20px; border-radius: 9999px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0,0,0,0.2); transition: left 200ms ease-in-out; pointer-events: none;"
    />
  </button>
</div>
`;

exports[`SwitchButton should match the snapshot when not toggled 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Test Switch Button"
    data-testid="react-gdpr-cookie-consent-switch-button"
    role="switch"
    style="position: relative; display: inline-block; height: 24px; width: 44px; flex-shrink: 0; border-radius: 9999px; padding: 0px; cursor: pointer; opacity: 1; transition: background-color 200ms ease-in-out; vertical-align: middle;"
    type="button"
  >
    <span
      aria-hidden="true"
      style="position: absolute; top: 2px; left: 2px; height: 20px; width: 20px; border-radius: 9999px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0,0,0,0.2); transition: left 200ms ease-in-out; pointer-events: none;"
    />
  </button>
</div>
`;

exports[`SwitchButton should match the snapshot with minimal configuration 1`] = `
<div>
  <button
    aria-checked="true"
    aria-label="Test Switch Button"
    data-testid="react-gdpr-cookie-consent-switch-button"
    role="switch"
    style="position: relative; display: inline-block; height: 24px; width: 44px; flex-shrink: 0; border-radius: 9999px; padding: 0px; cursor: pointer; opacity: 1; transition: background-color 200ms ease-in-out; vertical-align: middle;"
    type="button"
  >
    <span
      aria-hidden="true"
      style="position: absolute; top: 2px; left: 22px; height: 20px; width: 20px; border-radius: 9999px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0,0,0,0.2); transition: left 200ms ease-in-out; pointer-events: none;"
    />
  </button>
</div>
`;

exports[`SwitchButton should match the snapshot with screen reader label 1`] = `
<div>
  <button
    aria-checked="true"
    aria-label="Test Label"
    data-testid="react-gdpr-cookie-consent-switch-button"
    role="switch"
    style="position: relative; display: inline-block; height: 24px; width: 44px; flex-shrink: 0; border-radius: 9999px; padding: 0px; cursor: pointer; opacity: 1; transition: background-color 200ms ease-in-out; vertical-align: middle;"
    type="button"
  >
    <span
      aria-hidden="true"
      style="position: absolute; top: 2px; left: 22px; height: 20px; width: 20px; border-radius: 9999px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0,0,0,0.2); transition: left 200ms ease-in-out; pointer-events: none;"
    />
  </button>
</div>
`;
